<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="hackathon15.abcd.RegisterActivity"
    android:orientation="vertical"
    android:background="@color/bgcolor">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            android:hint="@string/text_username"
            android:textColor="@color/fgcolor"
            android:textColorHint="@color/fgcolor"
            android:layout_weight="1" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:textColor="@color/fgcolor"
            android:textColorHint="@color/fgcolor"
            android:id="@+id/first_name"
            android:layout_weight="1" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/last_name"
            android:hint="@string/last_name"
            android:textColor="@color/fgcolor"
            android:textColorHint="@color/fgcolor"
            android:layout_weight="1" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/phone"
            android:hint="@string/phone"
            android:textColor="@color/fgcolor"
            android:textColorHint="@color/fgcolor"
            android:layout_weight="1"
            android:inputType="phone"/>
    </TableRow>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:hint="@string/text_password"
            android:textColor="@color/fgcolor"
            android:textColorHint="@color/fgcolor"
            android:inputType="textPassword"
            android:layout_weight="1" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/text_cnfpassword"
            android:textColor="@color/fgcolor"
            android:textColorHint="@color/fgcolor"
            android:id="@+id/cnfpassword"
            android:inputType="textPassword"
            android:layout_weight="1" />

    </TableRow>


    <TableRow android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_text"
            android:background="@color/fgcolor"
            android:textColor="@color/bgcolor"
            android:id="@+id/register_button"
            android:onClick="attemptRegister"/>
    </TableRow>

    <TableRow android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/fgcolor"
            android:textColor="@color/bgcolor"
            android:text="@string/goback_text"
            android:id="@+id/login_button"
            android:onClick="gotoLogin"/>
    </TableRow>


</LinearLayout>
