<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ReportActivity"
    android:id="@+id/relativelayout1"
    android:background="@color/bgcolor">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:id="@+id/imageview_chosen"
        android:background="@color/bgcolor"
        android:contentDescription="@string/imageview_chosen_description"
        android:layout_above="@+id/button" />
    <Button
        android:onClick="takePicture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_choose_image"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/imageview_chosen"
        android:layout_alignStart="@+id/imageview_chosen"
        android:layout_marginBottom="65dp" />

    <Button
        android:onClick="sendReport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_send"
        android:id="@+id/send_button"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button" />


</RelativeLayout>